# cv

./: .gitignore  README.md  main.py  pyproject.toml  short_cv.md
app/: cv_generator.py  html_to_markdown.py  markdown_to_text.py
docs/: HELP.md
