[project]
name = "ap-cv"
version = "0.1.0"
description = "Andrii Peliak CV"
authors = [
    {name = "Andrii Peliak",email = "vseprav@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
